# Thirstys-Projects-Miniature-Office

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_SUMMARY.md  CANONICAL_BUNDLE_IMPLEMENTATION.md  CODE_CIVILIZATION.md  COMPLETE_LANGUAGE_CODEX.md  COVERAGE_ACHIEVEMENT.md  DEMO.txt  DENSITY_CODEX.md  DEPLOYMENT.md  Dockerfile  EASY_ACCESS.md  EXECUTIVE_INTERFACES.md  EXPANDED_AUTONOMY.md  FINAL_DELIVERY_SUMMARY.md  FLOOR_AND_EXECUTIVE_SUMMARY.md  FLOOR_IMPLEMENTATIONS_SUMMARY.md  FLOOR_SPECIFICATIONS.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_MULTI_LANGUAGE_FLOORS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FLOORS_11-13.md  IMPLEMENTATION_SUMMARY_FLOORS_20-22-23.md  INSTALL.md  LANGUAGE_FLOOR_IMPLEMENTATION.md  LIMITATIONS.md  MULTI_LANGUAGE_FLOORS.md  NON_DESIGN_CANONICAL_BUNDLE.md  PLATFORM_SUPPORT.md  PRODUCTION_READY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_REFERENCE_FLOORS_20-22-23.md  README.md  TASK_TIMELINE.md  ULTIMATE_FORM.md  build_floors.sh  (+11 more)
coverage_annotate/: z_0618756b1ff51bca_audit.py,cover  z_0618756b1ff51bca_canonical_bundle.py,cover  z_0618756b1ff51bca_code_civilization.py,cover  z_0618756b1ff51bca_cognitive_contract.py,cover  z_0618756b1ff51bca_consigliere.py,cover  z_0618756b1ff51bca_constitutional_mutation.py,cover  z_0618756b1ff51bca_creative_autonomy.py,cover  z_0618756b1ff51bca_density_codex.py,cover  z_0618756b1ff51bca_entity.py,cover  z_0618756b1ff51bca_expanded_autonomy.py,cover  z_0618756b1ff51bca_floor_specifications.py,cover  z_0618756b1ff51bca_head_of_security.py,cover  z_0618756b1ff51bca_maximum_autonomy.py,cover  z_0618756b1ff51bca_mission.py,cover  z_0618756b1ff51bca_off_duty_city.py,cover  z_0618756b1ff51bca_scarcity_economics.py,cover  z_0618756b1ff51bca_simulation.py,cover  z_0618756b1ff51bca_world.py,cover  z_2804e40980a64c7d_app.py,cover  z_2804e40980a64c7d_security.py,cover  z_6e971d0aa22d9363_contract.py,cover  z_ca4a0f18537011f1_department.py,cover  z_de05559f4338c853_supply_store.py,cover  z_fb6de0e1bfba701d_agent.py,cover
floors/: README.md
floors/haskell/: CodeAnalyzer.hs  DepartmentFloor.hs  FloorAgent.hs  Office.hs  README.md  TaskManager.hs  department-floor.cabal
floors/haskell/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
floors/ocaml/: README.md  department_floor.ml  dune  dune-project  floor21_ocaml.opam
floors/rust-async/: Cargo.toml  README.md
floors/rust-async/src/: main.rs
floors/wasm/: Cargo.toml  README.md
floors/wasm/src/: main.rs
tests/: conftest.py  test_agent.py  test_api.py  test_audit.py  test_canonical_bundle.py  test_code_civilization.py  test_cognitive_contract.py  test_consigliere.py  test_constitutional_mutation.py  test_contract.py  test_creative_autonomy.py  test_density_codex.py  test_department.py  (+14 more)
(+114 files in other folders)
