cabal-version:      2.4
name:               department-floor
version:            0.1.0.0
synopsis:           Haskell Department Floor - Floor 20
description:        Pure functional programming jurisdiction with type-safe design
license:            MIT
author:             Miniature Office
maintainer:         floor20@miniature.office
category:           Development
extra-source-files: README.md

executable department-floor
    main-is:          DepartmentFloor.hs
    build-depends:    base >=4.16 && <5,
                      aeson >=2.0 && <2.3,
                      text >=1.2 && <2.2,
                      bytestring >=0.11 && <0.13,
                      containers >=0.6 && <0.8,
                      time >=1.11 && <1.15,
                      mtl >=2.2 && <2.4,
                      transformers >=0.5 && <0.7
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
    other-modules:    FloorAgent,
                      TaskManager,
                      CodeAnalyzer,
                      Office
