[package]
name = "rust-async-department-floor"
version = "0.1.0"
edition = "2021"
authors = ["Miniature Office Team"]
description = "Rust-Async Department Floor - Asynchronous concurrent execution"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
pin-project = "1.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "department_floor"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
